
//子任务序列化到db使用！
message db_user_sub_task{
    /** 子任务ID */
    required uint32 sub_task_id = 1 [default = 0];
    /** 最佳星级 */
    required uint32 star = 2 [default = 0];
    /** 上一次进入时间 */
    required uint32 last_enter_timestamp = 3 [default = 0];
    /** 上次进入当日的进入次数 */
    required uint32 last_day_enter_num = 4 [default = 0];
     /** 总共的进入次数 */
    required uint32 total_enter_num = 5 [default = 0];
}

message db_user_sub_task_array {
    repeated db_user_sub_task elements = 1;
}

//任务序列化到db使用！
//message db_user_task{
//    /** 任务ID */
//    required uint32 task_id = 1 [default = 0];
//}